# mgear

./: built.bat
cmake/: build.bat
release/scripts/mgear/anim_picker/: gui.py
release/scripts/mgear/core/: anim_utils.py  applyop.py  node.py  primitive.py
release/scripts/mgear/pymaya/: attr.py  cmd.py  datatypes.py  node.py  util.py
release/scripts/mgear/shifter/: guide_template.py  guide_template_explorer.py  io.py
release/scripts/mgear/shifter/component/: __init__.py  guide.py
release/scripts/mgear/shifter_epic_components/EPIC_arm_01/: __init__.py
release/scripts/mgear/shifter_epic_components/EPIC_foot_01/: __init__.py
release/scripts/mgear/shifter_epic_components/EPIC_leg_01/: __init__.py  guide.py  settingsUI.py  settingsUI.ui
release/scripts/mgear/shifter_epic_components/EPIC_leg_3jnt_01/: __init__.py  guide.py  settingsUI.py  settingsUI.ui
release/scripts/mgear/shifter_epic_components/EPIC_neck_01/: __init__.py  guide.py  settingsUI.py  settingsUI.ui
release/scripts/mgear/shifter_epic_components/EPIC_spine_01/: __init__.py  guide.py  settingsUI.py  settingsUI.ui
src/: matrixConstraint.cpp  mgear_solvers.h  springGravityNode.cpp
src/cmake/: CMakeLists.txt  FindMaya.cmake  compile.bat
